--- a/src/components/common/search-input/SearchInput.module.scss
+++ b/src/components/common/search-input/SearchInput.module.scss
@@ -1,26 +1,25 @@
 .wrap {
-    position: relative;
-    width: 100%;  
-    margin-bottom: 20px;
-
+    position: relative;    
+    
   .input {
-    width: 100%;
-    height: 38px;  
+    width: 100%; 
+    height: 48px;  
     padding: 6px 10px;
     border-radius: 99px;
     background: #EDEDF0;
-    font-size: 13px;
+    font-size: 20px;
+    line-height: 32px;
     border: none;
 
         &:focus {
-             border: 1px solid blue;
+            border: 1px solid blue;
         } 
        
     }
     
     .icon {
         position: absolute;
-        top: 6px;
+        top: 16px;
         right: 10px;
     }      
 }
