--- a/src/components/common/search-input/SearchInput.module.scss
+++ b/src/components/common/search-input/SearchInput.module.scss
@@ -3,7 +3,7 @@
     
   .input {
     width: 100%; 
-    height: 48px;  
+    height: 40px;  
     padding: 6px 10px;
     border-radius: 99px;
     background: #EDEDF0;
@@ -12,14 +12,14 @@
     border: none;
 
         &:focus {
-            border: 1px solid blue;
-        } 
+            border: none;
+        }
        
     }
     
     .icon {
         position: absolute;
-        top: 16px;
+        top: 13px;
         right: 10px;
     }      
 }
