--- a/src/components/onlineStore/OnlineStore.module.scss
+++ b/src/components/onlineStore/OnlineStore.module.scss
@@ -8,11 +8,28 @@
     grid-column-gap: 15px;
 
     .item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       padding: 15px;
       
       &:hover {
         border-radius: 7px;
         box-shadow: 0px 0px 30px 4px #EDEDF0;
+      }
+
+      img {
+        width: 200px;
+        height: auto;  
+      }
+
+      .controls {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 10px;
       }
     }
   }
