--- a/src/components/onlineStore/OnlineStore.module.scss
+++ b/src/components/onlineStore/OnlineStore.module.scss
@@ -6,21 +6,45 @@
     justify-content: space-between;
     grid-row-gap: 15px;
     grid-column-gap: 15px;
+    margin-top: 16px;
 
     .item {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 15px;
-      
+      padding: 16px;
+           
       &:hover {
         border-radius: 7px;
         box-shadow: 0px 0px 30px 4px #EDEDF0;
       }
 
+      &_title {
+        margin-top: 10px;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 1px;
+      }
+
+      &_price {
+        margin: 8px 0;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 150%;
+        letter-spacing: 1px;       
+
+      }
+
+      &_description {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 1px;
+      }
+
       img {
-        width: 200px;
+        width: 210px;
         height: auto;  
       }
 
@@ -36,8 +60,3 @@
    
 }
 
-.title {
-  font-size: 24px;
-  text-align: center;
-  letter-spacing: 1px;
-}
