--- a/src/components/signInBtn/signInForm/SignInForm.module.scss
+++ b/src/components/signInBtn/signInForm/SignInForm.module.scss
@@ -19,11 +19,17 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      padding: 20px 50px;
+      padding: 40px;
       border-radius: 12px;
       background-color: white;
-      height: 400px;
-      width: 400px;
+      max-height: 350px;
+      max-width: 350px;
+
+      .title {
+        font-size: 28px;
+        font-weight: 600;
+        line-height: 39px;
+      }
 
       .form {
         display: flex;
@@ -32,30 +38,29 @@
         align-items: flex-end;
         margin-top: 20px;       
 
-        &>div {
-          margin-bottom: 15px;
-
-          &>label {
-            font-size: 18px;
-            font-weight: 600;
-          }
-        }
-
-        .controls {
-          width: 100%;
+       
+        .forSignUp {
           display: flex;
-          justify-content: space-between;
+          justify-content: center;
+          margin-top: 20px;
 
-          &>button {
-            padding: 7px 30px;
-            font-size: 18px;
+          .description {
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 24px;
           }
-        }
+
+          .bottomRedirect {
+            align-items: center;
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 24px;
+            cursor: pointer;
+          }
+        }   
 
       }
     }
-
-
 }
 
 .active {
