--- a/src/components/chat/Chat.module.scss
+++ b/src/components/chat/Chat.module.scss
@@ -2,20 +2,34 @@
   position: fixed;
   bottom: 50px;
   right: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 355px;
   height: 490px;
-  background-color: rgba(0,0,0,0.7);
+  background-color: white;
   opacity: 0;
-  pointer-events: none;
   transition: 0.5s;
-  z-index: 200;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  border-radius: 7px;
+  
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    
+    .heading {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #1976d2;
+      color: white;
+      padding: 15px
+    }
+
+
+  }
   
 }
 
 .active {
   opacity: 1;
-  pointer-events: all;
 }
