--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 16px;
   border-bottom: 1px solid  #787885;
+  background-color: white;
 
   .headerLogo {
     display: flex;
