--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -41,9 +41,9 @@
     }
 
     &Avatar {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
+      // width: 50px;
+      // height: 50px;
+      // border-radius: 50%;
       margin-left: 16px;
     }
   }
