--- a/src/components/chat/Chat.module.scss
+++ b/src/components/chat/Chat.module.scss
@@ -1,12 +1,12 @@
 .chat {
   position: fixed;
-  bottom: 50px;
-  right: 70px;
+  bottom: 100px;
+  right: 80px;
   width: 355px;
-  height: 490px;
+  height: 560px;
   background-color: white;
-  opacity: 0;
-  transition: 0.5s;
+  // opacity: 0;
+  // transition: 0.5s;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   border-radius: 7px;
 
@@ -22,14 +22,15 @@
     flex-direction: column;
     justify-content: space-between;
     
-    
     .heading {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      text-align: center;
       background-color: #1976d2;
       color: white;
-      padding: 15px
+      padding: 10px 15px 0 15px
     }
 
     .chatMessages {
