--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -5,10 +5,12 @@
   padding: 16px 50px;
   border-bottom: 1px solid  #787885;
   background-color: white;
-
+  
   .headerLogo {
     display: flex;
     align-items: center;
+    width: 60px;
+    height: 60px;
   }
 
   .searchField {
@@ -24,14 +26,14 @@
       // width: 50px;
       // height: 50px;
       // border-radius: 50%;
-      margin-right: 16px;
+      margin-right: 20px;
     }
 
     &Buttons {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 50px;
+      margin-right: 60px;
     }
 
     &Cart {
