--- a/src/components/onlineStore/OnlineStore.module.scss
+++ b/src/components/onlineStore/OnlineStore.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   position: relative;
-  z-index: -1;
+  // z-index: 0;
 
   .productsList {
     display: grid;
@@ -60,20 +60,5 @@
       }
     }
   }
-
-  .chatIcon {
-    position: fixed;
-    bottom: 30px;
-    right: 40px;
-    background-image: url('../../assets/img/chat-icon.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-
-  }
-   
 }
 
