add menu / change heeader

--- a/src/components/mainPage/MainPage.module.scss
+++ b/src/components/mainPage/MainPage.module.scss
@@ -1,9 +1,8 @@
-.wrapper {
+.mainBlock {
   position: relative;
-  
-  .sidebar {
-    display: flex;
-    flex-direction: column;
-  }
+
+
 }
+
+
 
