feat: add cart reducer / add selectors / add actions\

--- a/src/components/common/menu/Menu.module.scss
+++ b/src/components/common/menu/Menu.module.scss
@@ -8,7 +8,7 @@
     padding: 0px 50px;
     background-color: #1976d2;
     color: white;
-    border-bottom: 1px solid  #787885;
+    // border-bottom: 1px solid  #787885;
   
     .link {
       letter-spacing: 1px;
