--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 50px;
-  border-bottom: 1px solid  #787885;
+  // border-bottom: 1px solid  #787885;
   background-color: white;
   
   .headerLogo {
