--- a/src/components/cart/Cart.module.scss
+++ b/src/components/cart/Cart.module.scss
@@ -1,11 +1,35 @@
 .wrapper {
-  padding: 20px;
+  
+  .heading {
+    font-size: 30px;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+  }
+
+  .tableContainer {
+
+    .productItem{
+      display: flex;
+
+
+      &_description {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 15px;
+        
+      }
+    }
+
+    .productPrice {
+      font-size: 20px;
+      font-weight: 700;
+    }
+  }
+
+  
 
 
 }
 
-.title {
-  font-size: 24px;
-  text-align: center;
-  letter-spacing: 1px;
-}
+
