--- a/src/components/cart/Cart.module.scss
+++ b/src/components/cart/Cart.module.scss
@@ -27,9 +27,30 @@
     }
   }
 
-  
+  .notification {
+    font-size: 18px;
+    color: red
+  }
 
+  .orderingProcess {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+  }
 
+  .promoCode, .totalPrice {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &_text {
+      font-size: 18px;
+      font-weight: 700;
+      margin-bottom: 5px;
+      letter-spacing: .5px;
+    }
+  }
 }
 
 
