--- a/src/components/common/menu/Menu.module.scss
+++ b/src/components/common/menu/Menu.module.scss
@@ -1,29 +1,44 @@
+.menu {
+  display: flex;
+  justify-content: center;
+  background-color: #1976d2;
+  color: white;
 
-.menuList {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 0px 50px;
-    background-color: #1976d2;
-    color: white;
-    // border-bottom: 1px solid  #787885;
-  
-    .link {
-      letter-spacing: 1px;
-      padding: 8px 30px;
-  
-      &:hover {
-        cursor: pointer;
-        transform: scale(1.03);
-        transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
-        padding-bottom: -3px;
-      } 
-    } 
+  .container {
+    max-width: 1200px;
+    flex: 1 1 auto;
+
+    .menuList {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;  
+      font-size: 18px;
+      font-weight: 500;
       
-  }  
+     
+      
+    
+      .link {
+        letter-spacing: 1px;
+        padding: 8px 30px;
+    
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.03);
+          transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+          padding-bottom: -3px;
+        } 
+      } 
+        
+    }  
+    
+
+  }
+
   
+
+}
+
 .active {
     color: #1976d2;
     background-color: white;
