--- a/src/components/cart/Cart.module.scss
+++ b/src/components/cart/Cart.module.scss
@@ -22,8 +22,22 @@
     }
 
     .productPrice {
+      display: flex;
+      flex-direction: column;
       font-size: 20px;
       font-weight: 700;
+
+      &_start {
+        font-size: 16px;
+        font-weight: 500;
+        text-decoration: line-through
+      }  
+
+      &_end {
+        font-size: 16px;
+        font-weight: 500;
+        color: red;
+      } 
     }
   }
 
