feat: add components shipping & payment blocks

--- a/src/components/orderPage/OrderPage.module.scss
+++ b/src/components/orderPage/OrderPage.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
   margin-top: 50px;
+  border-top: 1px solid gray;
+  padding-top: 20px;
 
   .form {
  
@@ -8,27 +10,16 @@
       display:flex;
       justify-content: space-between;
       justify-content: center;
-  
-
-      .deliveryBlock {
-        min-width: 320px;    
-      }
-
-
-  
     }
 
     .controlsBlock {
       display: flex;
       justify-content: right;
-      margin-top: 15px;
+      margin-top: 20px;
       border-top: 1px solid gray;
-
     }
     
-  }
-
-  
+  }  
   
 }
 
@@ -38,10 +29,4 @@
   margin-top: 10px;
 }
 
-.title {
-  margin-bottom: 30px;
-}
 
-.errorMessage {
-  color: red;
-}
