add fields in firestore doc / change product card / change letter to telegramm / change styles

--- a/src/components/onlineStore/OnlineStore.module.scss
+++ b/src/components/onlineStore/OnlineStore.module.scss
@@ -44,6 +44,11 @@
         align-items: center;
       }
 
+      &_web_id {
+        margin-top: 5px;
+        font-size: 12px;
+      }
+
       &_description {
         font-size: 14px;
         font-weight: 400;
