--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
+@font-face {
+  font-family: 'Raleway', sans-serif;
+  src: url("./assets/fonts/Raleway-Bold.ttf") format("ttf");
+  src: url("./assets/fonts/Raleway-Light.ttf") format("ttf");
+  src: url("./assets/fonts/Raleway-Medium.ttf") format("ttf");
+  src: url("./assets/fonts/Raleway-Thin.ttf") format("ttf");
+  /* font-display: swap;
+  font-style: normal; */
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* background-image: url('/background-todo.jpg'); */
-  /* background: linear-gradient( rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0.5) ), url('/background-todo.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: top; */
+  -moz-osx-font-smoothing: grayscale;  
+  /* background: linear-gradient( rgba(255, 255, 255, 0.8), rgba(54, 22, 201, 0.13) );  */
+
 }
 
 h1,
