--- a/src/styles/scss/variables.scss
+++ b/src/styles/scss/variables.scss
@@ -3,7 +3,7 @@ $textColor: #fff;
 $primaryColor: #1976d2;
 $backgroundColorDark: #242426;
 $backgroundColorLightGray: #EDEDF0;
-$errorColor: #ff0066;   
+$errorColor: #ff00c8;   
 
 // ==== TEXT ====
 
