--- a/src/components/onlineStore/OnlineStore.module.scss
+++ b/src/components/onlineStore/OnlineStore.module.scss
@@ -6,11 +6,12 @@
     display: grid;
     grid-template-columns: repeat(4, auto);
     justify-content: space-between;
-    grid-row-gap: 15px;
+    grid-row-gap: 20px;
     grid-column-gap: 15px;
     margin-top: 25px;
 
     .item {
+      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -31,6 +32,9 @@
       }
 
       &_price {
+        position: absolute;
+        bottom: 60px;
+        right: 20px;
         margin: 8px 0;
         font-size: 20px;
         font-weight: 700;
@@ -58,11 +62,10 @@
 
       &_image {
         width: 220px;
-        height: 130px;
+        height: 145px;
                
         &>img {
-          width: 220px;
-          // height: 130px;
+          width: 220px;        
         }
         
       }
@@ -78,12 +81,14 @@
         font-weight: 500;
         color: white;
         background-color: #1976d2;
-        margin-top: 10px;
+        margin-top: 25px;
       }
     }
 
+
     .item:hover .item_controls {
       display: flex;
+    
     }
   }
 }
