add modal if send message success

--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 50px;
-  background-color: white;
+  background-color: #fff;
   
   .headerLogo {
     display: flex;
@@ -48,7 +48,7 @@
         right: -4px;  
         width: 18px;
         height: 18px;
-        color: white;
+        color: #fff;
         background-color:  #F44336;
         font-size: 14px;
         border-radius: 50%;
