--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -33,6 +33,10 @@
       flex-direction: column;
       align-items: center;
       margin-right: 60px;
+
+      & {
+        font-weight: 600;
+      }
     }
 
     &Cart {
