--- a/src/components/common/menu/Menu.module.scss
+++ b/src/components/common/menu/Menu.module.scss
@@ -1,23 +1,20 @@
 .menu {
   display: flex;
+  align-items: center;
   justify-content: center;
   background-color: #1976d2;
   color: white;
 
   .container {
     max-width: 1200px;
-    flex: 1 1 auto;
-
+    flex: auto 1 1;
+    
     .menuList {
       display: flex;
       justify-content: space-between;
       align-items: center;  
       font-size: 18px;
-      font-weight: 500;
-      
      
-      
-    
       .link {
         letter-spacing: 1px;
         padding: 8px 30px;
@@ -29,14 +26,9 @@
           padding-bottom: -3px;
         } 
       } 
-        
+       
     }  
-    
-
   }
-
-  
-
 }
 
 .active {
