--- a/src/components/signInBtn/signInForm/SignInForm.module.scss
+++ b/src/components/signInBtn/signInForm/SignInForm.module.scss
@@ -19,11 +19,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      padding: 40px;
+      padding: 40px 20px;
       border-radius: 12px;
       background-color: white;
-      max-height: 350px;
-      max-width: 350px;
+      max-height: 400px;
       z-index: 60;
 
       .title {
