--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -1,67 +1,75 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 50px;
-  background-color: #fff;
+.headerSection {
+
+ 
+
   
-  .headerLogo {
-    display: flex;
-    align-items: center;
-    width: 65px;
-    height: 65px;
-  }
-
-  .searchField {
-    flex-basis: 650px;
-  }
-
-  .controls {
+  .container {
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
-
-    &Avatar {
-      // width: 50px;
-      // height: 50px;
-      // border-radius: 50%;
-      margin-right: 20px;
-    }
-
-    &Buttons {
+    align-items: center;
+    max-width: 1200px;
+    padding: 16px 50px;
+    background-color: #fff;
+    
+    .headerLogo {
       display: flex;
-      flex-direction: column;
       align-items: center;
-      margin-right: 60px;
-
-      & {
-        font-weight: 600;
-      }
+      width: 65px;
+      height: 65px;
     }
-
-    &Cart {
-      position: relative;
-      margin-right: 20px;
-
-      &Orders {
+  
+    .searchField {
+      flex-basis: 550px;
+    }
+  
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; 
+  
+      &Avatar {
+        // width: 50px;
+        // height: 50px;
+        // border-radius: 50%;
+        margin-right: 20px;
+      }
+  
+      &Buttons {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
-        position: absolute;
-        top: -2px;
-        right: -4px;  
-        width: 18px;
-        height: 18px;
-        color: #fff;
-        background-color:  #F44336;
-        font-size: 14px;
-        border-radius: 50%;
+        margin-right: 60px;
+  
+        & {
+          font-weight: 600;
+        }
+      }
+  
+      &Cart {
+        position: relative;
+        margin-right: 20px;
+  
+        &Orders {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: -2px;
+          right: -4px;  
+          width: 18px;
+          height: 18px;
+          color: #fff;
+          background-color:  #F44336;
+          font-size: 14px;
+          border-radius: 50%;
+        }
       }
     }
+  
   }
+   
 
 }
-
-
 
 
