--- a/src/components/maps/Maps.module.scss
+++ b/src/components/maps/Maps.module.scss
@@ -1,25 +1,10 @@
-.wrap {
-    position: relative;    
-    
-  .input {
-    width: 100%; 
-    height: 40px;  
-    padding: 6px 10px;
-    border-radius: 99px;
-    background: #EDEDF0;
-    font-size: 20px;
-    line-height: 32px;
-    border: none;
+.mapsSection {
+    position: relative;
 
-        &:focus {
-            border: none;
-        }
-       
-    }
-    
-    .icon {
+   .addressSearchContainer {
         position: absolute;
-        top: 13px;
-        right: 10px;
-    }      
+        top: 10px;
+        left: 10px;
+   }
+
 }
