--- a/src/components/maps/Maps.module.scss
+++ b/src/components/maps/Maps.module.scss
@@ -2,9 +2,18 @@
     position: relative;
 
    .addressSearchContainer {
+        display: flex;
+        align-items: center;
         position: absolute;
         top: 10px;
         left: 10px;
+        opacity: 0.4;
+
+        &:hover {
+          opacity: 1;
+          transition: opacity .5s ease-in-out
+        }
+     
    }
 
 }
