create offices list

--- a/src/styles/scss/variables.scss
+++ b/src/styles/scss/variables.scss
@@ -2,7 +2,7 @@
 $textColor: #fff;
 $primaryColor: #1976d2;
 $backgroundColorDark: #242426;
-$backgroundColorLightGray: #EDEDF0;
+$backgroundColorLightGray: #ededf0e7;
 $errorColor: #ff00c8;   
 
 // ==== TEXT ====
